--- a/app/blog/posts/yield-return.mdx
+++ b/app/blog/posts/yield-return.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'What is 'yield' keyword in programming languages'
+title: ' 'yield' keyword in programming languages'
 publishedAt: '2024-07-22'
 summary: 'You'll learn what yield is and how to use yield in your code!'
 ---
 
-#What is 'yield'?
+# What is `yield`?
