--- a/app/blog/posts/sorting-algorithms.mdx
+++ b/app/blog/posts/sorting-algorithms.mdx
@@ -1,58 +1,68 @@
 ---
-title: 'Types of Sorting algorithms'
-publishedAt: '2024-07-22'
-summary: 'Simple explaination of sorting algorithms and their types'
+title: "Types of Sorting Algorithms"
+publishedAt: "2024-07-23"
+summary: "Simple explanation of sorting algorithms and their types"
 image: /images/sort/sorting.png
 ---
 
 Sorting algorithms play a critical role in computer science, enabling the efficient organization and retrieval of data. They are fundamental to various applications, from database management systems to search engines, and form the backbone of many computational tasks. The efficiency of these algorithms is often measured by their time complexity, which indicates how the running time of an algorithm increases with the size of the input data.
 
-## What is time complexity?
-I've made a blog about [Time Complexity](/blog/time-complexity). 
+## What is Time Complexity?
 
-## Types of sorting algorithms
+I've made a blog about [Time Complexity](/blog/time-complexity).
+
+## Types of Sorting Algorithms
 
 Sorting algorithms can be broadly categorized into two types: comparison-based and non-comparison-based. Comparison-based algorithms sort elements by comparing them, while non-comparison-based algorithms leverage alternative techniques like counting or hashing.
-Comparison-Based Sorting Algorithms
 
-## Comparison-Based Sorting Algorithms
+### Comparison-Based Sorting Algorithms
 
 #### 1. **Bubble Sort**
+
 Bubble Sort is one of the simplest sorting algorithms. It repeatedly steps through the list, compares adjacent elements, and swaps them if they are in the wrong order. This process continues until the list is sorted. While easy to understand and implement, Bubble Sort is inefficient for large datasets, with a time complexity of \(O(n^2)\).
 
-Here is a simple Python code.
+Here is a simple Python code:
+
 ```python
-
-
-
-``` 
-
-
-
+def bubblesort(array):
+    n = len(array)
+    for i in range(n):
+        for j in range(n - i - 1):
+            if array[j] > array[j + 1]:
+                array[j], array[j + 1] = array[j + 1], array[j]
+    return array
+```
 
 #### 2. **Selection Sort**
+
 Selection Sort divides the list into a sorted and an unsorted region. It repeatedly selects the smallest (or largest) element from the unsorted region and moves it to the sorted region. Like Bubble Sort, Selection Sort has a time complexity of \(O(n^2)\), making it impractical for large datasets.
 
 #### 3. **Insertion Sort**
+
 Insertion Sort builds the sorted array one element at a time by repeatedly taking the next element and inserting it into its correct position. While it has a worst-case time complexity of \(O(n^2)\), it performs well on small or nearly sorted datasets, with an average time complexity of \(O(n^2)\) and a best-case complexity of \(O(n)\).
 
 #### 4. **Merge Sort**
+
 Merge Sort is a divide-and-conquer algorithm that recursively splits the list into halves until each sublist contains a single element, then merges the sublists to produce a sorted list. It has a time complexity of \(O(n \log n)\), making it efficient for large datasets. Merge Sort is stable and works well with linked lists and external storage.
 
 #### 5. **Quick Sort**
+
 Quick Sort, another divide-and-conquer algorithm, selects a 'pivot' element and partitions the array into elements less than the pivot and those greater than the pivot. The process is recursively applied to the sub-arrays. Quick Sort has an average-case time complexity of \(O(n \log n)\), but its worst-case complexity can be \(O(n^2)\) if the pivot selection is poor. Nevertheless, it is one of the most efficient and widely used sorting algorithms.
 
 ### Non-Comparison-Based Sorting Algorithms
 
 #### 1. **Counting Sort**
+
 Counting Sort is an integer sorting algorithm that counts the occurrences of each unique element. It then calculates the positions of elements in the sorted array based on these counts. With a time complexity of \(O(n + k)\), where \(k\) is the range of the input, Counting Sort is highly efficient for datasets with a limited range of integers. However, it is not suitable for sorting floating-point numbers or strings.
 
 #### 2. **Radix Sort**
+
 Radix Sort processes each digit of the numbers, starting from the least significant digit to the most significant digit, using a stable sub-sorting algorithm like Counting Sort. With a time complexity of \(O(d \cdot (n + k))\), where \(d\) is the number of digits and \(k\) is the range of the digits, Radix Sort is efficient for large datasets with uniformly distributed integers.
 
 #### 3. **Bucket Sort**
+
 Bucket Sort distributes the elements into several 'buckets' and then sorts each bucket individually, usually with another sorting algorithm like Insertion Sort. The sorted buckets are then concatenated to form the final sorted array. It has an average-case time complexity of \(O(n + k)\), making it effective for uniformly distributed data.
 
-
 ## Conclusion
-Sorting algorithms are a cornerstone of computer science, with each type offering unique strengths and suited for different applications. From simple algorithms like Bubble Sort to more complex ones like Quick Sort and Radix Sort, these methods ensure that data can be efficiently organized, accessed, and analyzed. Understanding the mechanisms and applications of sorting algorithms is essential for anyone involved in the field of computer science, as they provide the foundation for many computational tasks and technologies in our increasingly digital world.
+
+Sorting algorithms are a cornerstone of computer science, with each type offering unique strengths and being suited for different applications. From simple algorithms like Bubble Sort to more complex ones like Quick Sort and Radix Sort, these methods ensure that data can be efficiently organized, accessed, and analyzed. Understanding the mechanisms and applications of sorting algorithms is essential for anyone involved in the field of computer science, as they provide the foundation for many computational tasks and technologies in our increasingly digital world.
