--- a/app/blog/posts/time-complexity.mdx
+++ b/app/blog/posts/time-complexity.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Explaination of 'Time Complexity''
-publishedAt: '2024-07-22'
+publishedAt: '2024-07-23'
 summary: 'Simple explaination of sorting algorithms'
 image: /images/title.png
 ---
@@ -17,7 +17,7 @@ Time complexity is typically expressed using Big O notation, which describes the
 
 <Image
   alt={`Cheatsheet`}
-  src={`/images/complex.png`}
+  src={`/images/sort/sorting.png`}
   width={1280}
   height={720}
 />
