--- a/app/blog/posts/time-complexity.mdx
+++ b/app/blog/posts/time-complexity.mdx
@@ -17,7 +17,7 @@ Time complexity is typically expressed using Big O notation, which describes the
 
 <Image
   alt={`Cheatsheet`}
-  src={`/images/sort/sorting.png`}
+  src={`/images/complex.png`}
   width={1280}
   height={720}
 />
