--- a/app/blog/posts/time-complexity.mdx
+++ b/app/blog/posts/time-complexity.mdx
@@ -5,6 +5,13 @@ summary: 'Simple explaination of sorting algorithms'
 image: /images/title.png
 ---
 
+<Image
+  alt={`Cheatsheet`}
+  src={`/images/title.png`}
+  width={1280}
+  height={720}
+/>
+
 Time complexity is a critical concept in computer science, particularly in algorithm analysis and design. It provides a way to evaluate and compare the efficiency of algorithms, specifically in terms of their execution time relative to the size of the input. Understanding time complexity helps developers and engineers choose the most efficient algorithms for their applications and ensure that systems perform optimally. This essay explores the concept of time complexity, its common notations, and its significance in algorithm design.
 
 ## What is Time Complexity?
